# ununseptium

./: .gitignore  CHANGELOG.md  CITATION.md  CODE_OF_CONDUCT.md  COMPLIANCE.md  CONTRIBUTING.md  GOVERNANCE.md  PRIVACY.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build.yml  ci.yml  docs-quality.yml  scorecard.yml
docs/: faq.md  index.md  references.md
docs/ai/: ai-overview.md  governance.md  sciml.md
docs/aml/: aml-overview.md
docs/architecture/: ai-pipeline.md  data-flow.md  overview.md  plugin-architecture.md
docs/figures/: README.md
docs/kyc/: kyc-overview.md
docs/legal/: legal-notices.md
docs/mathstats/: evt.md  graph-features.md  hawkes.md  mathstats-overview.md  sequential.md  uncertainty.md
docs/model-zoo/: model-zoo.md
docs/performance/: performance.md
docs/security/: auditability.md  crypto-and-key-management.md  security-overview.md  threat-model.md
src/ununseptium/: __init__.py
src/ununseptium/ai/: __init__.py  governance.py
src/ununseptium/ai/sciml/: __init__.py  constraints.py  pinn.py
src/ununseptium/aml/: __init__.py  cases.py  reporting.py
src/ununseptium/aml/monitoring/: statistical.py  streaming.py
src/ununseptium/cli/: main.py
src/ununseptium/core/: __init__.py
src/ununseptium/kyc/: __init__.py  identity.py  workflows.py
src/ununseptium/mathstats/: __init__.py  point_process.py
src/ununseptium/model_zoo/: loader.py
src/ununseptium/plugins/: base.py
src/ununseptium/security/: __init__.py  audit.py  crypto.py  pii.py
tests/: __init__.py  conftest.py  test_basic.py  test_core.py  test_kyc.py
